# sortinglowerbounds

./: .gitignore  CMakeLists.txt  README.md
results/: output11__2022_04_17__10_11_27.txt  output11__2022_04_17__10_11_27_events.txt  output12__2022_04_17__10_12_19.txt  output12__2022_04_17__10_12_19_events.txt  output13__2022_04_17__10_12_58.txt  output13__2022_04_17__10_12_58_events.txt  output13__2022_04_19__10_26_15.txt  output13__2022_04_19__10_26_15_events.txt  output13__2022_04_19__10_26_24.txt  output13__2022_04_19__10_26_24_events.txt  output13__2022_04_19__10_26_32.txt  output13__2022_04_19__10_26_32_events.txt  output14__2022_04_17__15_37_09.txt  output14__2022_04_17__15_37_09_events.txt  output15__2022_04_17__15_38_59.txt  output15__2022_04_17__15_38_59_events.txt  output16_FINISHED_2021_05_29__15_21_16.txt  output16__2022_04_17__16_08_42.txt  output17__2022_04_07__16_44_56.txt  output17__2022_04_07__16_44_56_events.txt  output17__2022_04_08__10_55_37.txt  output17_falsch__2021_11_11__13_41_17.txt  output18__2021_06_08__15_52_29.txt  output18__2022_04_04__15_43_34.txt  output18__2022_04_04__15_43_34_events.txt  output18__2022_04_08__10_50_12.txt  output18__2022_04_08__10_50_12_events.txt  output18__2022_04_13__11_54_49.txt  output19__2022_04_18__03_40_56.txt  output19__2022_04_18__03_40_56_events.txt  output22__2022_02_24__16_12_41.txt  output22__2022_02_24__16_12_41_events.txt  output28__2022_02_25__09_17_51.txt  output28__2022_02_25__09_17_51_events.txt  params_14.txt  params_15.txt  params_16.txt  params_17.txt  results_sortinglowerbounds_n=28.txt
src/: TimeProfile.cpp  TimeProfile.h  backwardSearch.cpp  backwardSearch.h  bidirSearch.cpp  bidirSearch.h  config.cpp  config.h  eventLog.cpp  eventLog.h  expandedPoset.cpp  expandedPoset.h  forwardSearch.cpp  forwardSearch.h  isoTest.cpp  isoTest.h  linExtCalculator.cpp  linExtCalculator.h  main.cpp  mmapAllocator.cpp  mmapAllocator.h  myHashmap.h  niceGraph.cpp  niceGraph.h  oldGenMap.cpp  oldGenMap.h  posetAnalyser.cpp  posetAnalyser.h  posetContainer.cpp  posetContainer.h  posetHandle.cpp  posetHandle.h  posetInfo.cpp  posetInfo.h  posetMap.cpp  posetMap.h  posetObj.cpp  posetObj.h  posetObjCore.cpp  posetObjCore.h  (+16 more)
